logs/cnx-db.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SQLAlchemy-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/cnx_db-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/cnxdb'...
Listing './lib/python3.5/site-packages/cnxdb/archive-sql'...
Listing './lib/python3.5/site-packages/cnxdb/archive-sql/schema'...
Listing './lib/python3.5/site-packages/cnxdb/archive-sql/schema/constants'...
Listing './lib/python3.5/site-packages/cnxdb/archive-sql/schema/legacy'...
Compiling './lib/python3.5/site-packages/cnxdb/archive-sql/schema/shred_collxml.py'...
***   File "./lib/python3.5/site-packages/cnxdb/archive-sql/schema/shred_collxml.py", line 152
    def startElementNS(self, (uri, localname), qname, attrs):
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cnxdb/archive-sql/search'...
Listing './lib/python3.5/site-packages/cnxdb/cli'...
Listing './lib/python3.5/site-packages/cnxdb/contrib'...
Listing './lib/python3.5/site-packages/cnxdb/init'...
Listing './lib/python3.5/site-packages/cnxdb/migrations'...
Listing './lib/python3.5/site-packages/cnxdb/publishing-sql'...
Listing './lib/python3.5/site-packages/cnxdb/schema'...
Listing './lib/python3.5/site-packages/cnxdb/triggers'...
Listing './lib/python3.5/site-packages/cnxdb/triggers/transforms'...
Listing './lib/python3.5/site-packages/cnxdb/triggers/transforms/xsl'...
Listing './lib/python3.5/site-packages/cnxdb/triggers/transforms/xsl/content2presentation-files'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psycopg2'...
Listing './lib/python3.5/site-packages/psycopg2/.libs'...
Listing './lib/python3.5/site-packages/psycopg2/tests'...
Listing './lib/python3.5/site-packages/psycopg2-2.7.3.2.dist-info'...
Listing './lib/python3.5/site-packages/rhaptos'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils'...
Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/addsectiontags.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/addsectiontags.py", line 173
    print level
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/odt2cnxml.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/odt2cnxml.py", line 233
    except etree.XMLSyntaxError, e:
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml/rng'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml/rng/0.6'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/schema/cnxml/rng/0.7'...
Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/tests'...
Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/validatecnxml.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/validatecnxml.py", line 24
    print "Document validates against cnxml 0.7"
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/rhaptos/cnxmlutils/xml2xhtml.py'...
***   File "./lib/python3.5/site-packages/rhaptos/cnxmlutils/xml2xhtml.py", line 86
    print "argparse is needed for commandline"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/rhaptos/cnxmlutils/xsl'...
Listing './lib/python3.5/site-packages/rhaptos.cnxmlutils-1.3.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sqlalchemy'...
Listing './lib/python3.5/site-packages/sqlalchemy/connectors'...
Listing './lib/python3.5/site-packages/sqlalchemy/databases'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/firebird'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mssql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/mysql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/oracle'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/postgresql'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sqlite'...
Listing './lib/python3.5/site-packages/sqlalchemy/dialects/sybase'...
Listing './lib/python3.5/site-packages/sqlalchemy/engine'...
Listing './lib/python3.5/site-packages/sqlalchemy/event'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext'...
Listing './lib/python3.5/site-packages/sqlalchemy/ext/declarative'...
Listing './lib/python3.5/site-packages/sqlalchemy/orm'...
Listing './lib/python3.5/site-packages/sqlalchemy/sql'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/plugin'...
Listing './lib/python3.5/site-packages/sqlalchemy/testing/suite'...
Listing './lib/python3.5/site-packages/sqlalchemy/util'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/cli'...
Listing './lib/python3.5/site-packages/tests/cli/scanned_import'...
Listing './lib/python3.5/site-packages/tests/contrib'...
Listing './lib/python3.5/site-packages/tests/init'...
Listing './lib/python3.5/site-packages/tests/init/data'...
Listing './lib/python3.5/site-packages/tests/init/data/example_schema'...
Listing './lib/python3.5/site-packages/tests/init/data/example_schema/sub'...
Listing './lib/python3.5/site-packages/tests/init/data/example_schema/sub/subsub'...
Listing './lib/python3.5/site-packages/tests/schema'...
Listing './lib/python3.5/site-packages/tests/triggers'...
Listing './lib/python3.5/site-packages/tests/triggers/transforms'...
Listing './lib/python3.5/site-packages/venusian'...
Listing './lib/python3.5/site-packages/venusian/tests'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror_package'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/attrerror_package/will_cause_import_error'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/import_and_scan'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror_package'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importerror_package/will_cause_import_error'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/importonly'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub1'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub1/subsub1'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub2'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/nested/sub2/subsub2'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/one'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/pyc'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/pyc/subpackage'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/subpackages'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/subpackages/childpackage'...
Listing './lib/python3.5/site-packages/venusian/tests/fixtures/two'...
Listing './lib/python3.5/site-packages/venusian-1.1.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
